[package]
name = "x11nas"
version = "2.19.1"
authors = [
    "daggerbot <daggerbot@gmail.com>",
    "Erle Pereira <erle@erlepereira.com>",
    "not_a_seagull <jtnunley01@gmail.com>",
]
description = "X11 library bindings for Rust, forked to be no_std"
license = "MIT"
repository = "https://github.com/not-a-seagull/x11nas.git"
build = "build.rs"
documentation = "https://docs.rs/x11"
workspace = ".."

[features]
default = ["std"]
dpms = []
glx = []
std = []
xcursor = []
xf86vmode = []
xft = []
xinerama = []
xinput = []
xlib = []
xlib_xcb = []
xmu = []
xrandr = []
xrecord = ["xtst"]
xrender = []
xss = []
xt = []
xtest = ["xtst"]
xtst = []
dox = []

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.8"
